syntax = "proto3";

import "dto/time_slot_control_data.proto";

option csharp_namespace = "Proto.Requests.UseCase";

message GetTimeSlotControlDataRequestProto {
  string time_slot_id = 1;
}



service UseCaseRequestService {
  rpc GetTimeSlotControlDataById(GetTimeSlotControlDataRequestProto) returns (TimeSlotControlDataProto);
}
